--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "PWA Example",
-  "short_name": "PWA",
+  "name": "JK-Sarabun ระบบสารบรรณอิเล็กทรอนิกส์",
+  "short_name": "JK-Sarabun",
   "start_url": ".",
   "display": "standalone",
   "background_color": "#ffffff",
